# TestOpenGLES

TestOpenGLAndroid/: settings.gradle.kts
TestOpenGLAndroid/app/: build.gradle.kts
TestOpenGLAndroid/app/src/main/: AndroidManifest.xml
TestOpenGLAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TestOpenGLAndroid/app/src/main/cpp/utils/: log.h  shader_utils.h
TestOpenGLAndroid/app/src/main/java/com/felix/test/opengl/android/: MainActivity.kt  XPlay.kt
TestOpenGLAndroid/app/src/main/res/layout/: activity_main.xml
TestOpenGLAndroid/app/src/main/res/values/: strings.xml  themes.xml
TestOpenGLAndroid/app/src/main/res/values-night/: themes.xml
TestOpenGLAndroid/gradle/wrapper/: gradle-wrapper.properties
XPlayer/: .gitignore  settings.gradle.kts
XPlayer/app/: build.gradle.kts
XPlayer/app/src/main/: AndroidManifest.xml
XPlayer/app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h  native-lib.cpp
XPlayer/app/src/main/cpp/audio/: FFResample.cpp  FFResample.h  IAudioPlayer.cpp  IAudioPlayer.h  IResample.cpp  IResample.h  SLAudioPlayer.cpp  SLAudioPlayer.h
XPlayer/app/src/main/cpp/decode/: FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
XPlayer/app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
XPlayer/app/src/main/cpp/include/libavutil/: ffversion.h
XPlayer/app/src/main/cpp/view/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
XPlayer/app/src/main/java/com/felix/xplayer/: MainActivity.kt  VideoActivity.kt
XPlayer/app/src/main/java/com/felix/xplayer/view/: XPlay.kt
XPlayer/app/src/main/res/layout/: activity_main.xml  activity_video.xml
XPlayer/app/src/main/res/values/: themes.xml
XPlayer/app/src/main/res/values-night/: themes.xml
XPlayer/gradle/: libs.versions.toml
XPlayer/gradle/wrapper/: gradle-wrapper.properties
